# core

./: .env.example  .env.grok43  .gitignore  .goosehints  AGENTS.md  CLAIMS.md  CLAUDE.md  COMMERCIAL_LICENSE.md  GEMINI.md  GPT55.md  GROK.md  HANDOFF-antigravity-2026-07-01.md  HANDOFF-gpt55-2026-06-03.md  HANDOFF-gpt55-2026-06-18.md  HANDOFF-gpt55-2026-06-20.md  LICENSE  Makefile  README.md  conftest.py  patch_nodes.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md
.private/: san_diego_partnership_packet.md
algebra/: __init__.py  backend.py  cga.py  cl41.py  holonomy.py  rotor.py  versor.py
alignment/: __init__.py  graph.py
benchmarks/: README.md  apple_uma_mechanical_sympathy.py  apple_uma_mlx_exact_recall.py  apple_uma_persona_motor.py  articulation.py  cost.py  footprint.py  learning_curve.py  pipeline_profiler.py  replay_vs_llm.py  run_benchmarks.py  teaching_loop.py  word_selection_tracer.py
calibration/: params.py  replay.py  report.py  tune.py
chat/: __init__.py  __main__.py  always_on.py  always_on_daemon.py  anaphora.py  articulation_telemetry.py  ask_runtime.py  atom_equivalence.py  cross_pack_grounding.py  dispatch_trace.py  example_surface.py  narrative_surface.py  oov_surface.py  pack_grounding.py  pack_resolver.py  pack_surface_candidate.py  partial_surface.py  refusal.py  register_substantive.py  register_variation.py  runtime.py  teaching_grounding.py  telemetry.py  thread_context.py  verdicts.py
core/: __init__.py  _safe_display.py  array_codec.py  cli.py  config.py  engine_identity.py  epistemic_state.py
core-rs/: Cargo.toml  build.rs  pyproject.toml
core-rs/src/: cga.rs  cl41.rs  diffusion.rs  holonomy.rs  lib.rs  propagate.rs  vault.rs  versor.rs
core-rs/tests/: test_arena.rs  test_cga.rs  test_cl41.rs  test_crdt_hash_parity.rs  test_vault.rs  test_versor.rs
core-rs/tests/fixtures/: crdt_parity_expected.rs
core_ingest/: __init__.py  compiler.py  manifold.py  pipeline.py  pressure.py  segmenter.py  types.py
docs/: EVAL_AUDIT_2026-05-20.md  PROGRESS.md  README.md  RUST.md  Whitepaper.md  Yellowpaper.md  admissibility-exemplars.md  audio_pipeline_overview.md  capability_roadmap.md  claims_ledger.md  core-rd-base-prompts.md  ethics_packs.md  eval_methodology.md  formation_pipeline_plan.md  frontier_baselines.md  gaps.md  handoff_template.md  hitl-backpressure.md  holdout_recipients.txt  identity_packs.md  master-plan-post-substrate-audit.md  memo.html  model_dependency_size_tally.md  pack_inventory_2026-05-21.md  position_paper.md  recognizer-registry.md  refusal-taxonomy.md  research_portfolio.md  reviewers.yaml  roadmap.md  runtime_contracts.md  safety_packs.md  sponsors.md  teaching_order.md  test-debt-quarantine.md  testing-lanes.md  truth_seeking_schema.md
engine_state/: __init__.py
evals/: CLAIMS.md  _parallel.py  baseline_runner.py  cognition_cases.jsonl  framework.py  holdout_runner.py  metrics.py  parallel.py  run_cognition_eval.py
field/: __init__.py  operators.py  propagate.py  state.py
formation/: __init__.py  allowlist.py  cache.py  candidate.py  cli.py  compiler.py  compose.py  course.py  forge.py  hashing.py  index.py  mastery.py  promote.py  ratify.py  runner.py  smelter.py
generate/: __init__.py  admissibility.py  articulation.py  articulation_legality.py  attention.py  bridge_trace.py  candidate_operator.py  compute_budget.py  construction_affordances.py  contract_residuals.py  dialogue.py  discourse_planner.py  epistemic_basis.py  exhaustion.py  field_incidence_reader.py  foundational_families.py  geometric_search_run.py  graph_constraint.py  graph_planner.py  grounding_accessors.py  intent.py  intent_bridge.py  intent_ratifier.py  kernel_facts.py  logic_canonical.py  logic_equivalence.py  math_candidate_graph.py  math_candidate_parser.py  math_completeness.py  math_parser.py  math_problem_graph.py  math_realizer.py  math_roundtrip.py  math_solver.py  math_symbolic_equivalence.py  math_symbolic_normalizer.py  (+38 more)
(+3674 files in other folders)
