[project]
name = "core-versor"
version = "0.1.0"
description = "CORE runtime"
requires-python = ">=3.11"

dependencies = [
    "hypothesis>=6.152.7",
    "numpy>=1.26",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6",
    "psutil>=7.0",
    "pyrage==1.2.3",
    "pyyaml>=6.0",
    "ruff>=0.15.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
]

[project.scripts]
core = "core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "algebra*",
    "alignment*",
    "chat*",
    "core*",
    "field*",
    "formation*",
    "generate*",
    "ingest*",
    "language_packs*",
    "morphology*",
    "persona*",
    "sensorium*",
    "session*",
    "vault*",
    "vocab*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
