[package]
name = "core-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21" }
rayon = "1.10"
nalgebra = "0.33"
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-rand = "0.15"
bytemuck = { version = "1.16", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
